--- a/games.html
+++ b/games.html
@@ -12,7 +12,7 @@
         <div class="game-main">
             <a class="game-div" href="games/would-you-rather.html">
                 <div class="zoom-box">
-                    <img class="game-cover" src="assets/would you rather.webp">
+                    <img class="game-cover" src="assets/would you rather.jpg">
                 </div>
                 Would You Rather?
             </a>
@@ -27,6 +27,12 @@
                     <img class="game-cover" src="assets/jenga.jpg">
                 </div>
                 Jenga Dares
+            </a>
+            <a class="game-div" href="games/heads-up.html">
+                <div class="zoom-box">
+                    <img class="game-cover" src="assets/heads up.jpg">
+                </div>
+                Heads Up
             </a>
         </div>
     </div>
