--- a/games/taboo.html
+++ b/games/taboo.html
@@ -53,6 +53,8 @@
             </div>
             <button id="pass">Pass</button>
             <button id="guessed">Guessed</button>
+            <p class="note phonenote">Swipe card right for Guessed<br>
+            Swipe card left for Pass</p>
         </div>
     </div>
     <div id="end-screen" style="display: none;">
