--- a/games/jenga.html
+++ b/games/jenga.html
@@ -40,7 +40,11 @@
         </div>
         <div id="game-section" style="display: none;">
             <div class="container">
-                <h2>Jenga challenges</h2>
+                <h2>Jenga Dares</h2>
+                <p class="note">
+                    If you fail to complete your task again, you go again. <br>
+                    If you drop the tower, you must pick 3 pieces at random and perform their tasks 
+                </p>
             </div>
             <div class="container">
                 <p class="note">Enter Piece Number:</p>
@@ -66,12 +70,6 @@
             </div>
             <div class="container">
                 <p id="task-display"></p>
-            </div>
-            <div >
-                <p class="note">
-                    If you fail to complete your task again, you go again. <br>
-                    If you drop the tower, you must pick 3 pieces at random and perform their tasks 
-                </p>
             </div>
         </div>
     </div>
