--- a/games/jenga.html
+++ b/games/jenga.html
@@ -39,13 +39,13 @@
             </div>
         </div>
         <div id="game-section" style="display: none;">
-            <div class="container">
+            <!-- <div class="container">
                 <h2>Jenga Dares</h2>
                 <p class="note">
                     If you fail to complete your task again, you go again. <br>
                     If you drop the tower, you must pick 3 pieces at random and perform their tasks 
                 </p>
-            </div>
+            </div> -->
             <div class="container">
                 <p class="note">Enter Piece Number:</p>
       
@@ -70,6 +70,10 @@
             </div>
             <div class="container">
                 <p id="task-display"></p>
+                <p class="note">
+                    If you fail to complete your task again, you go again. <br>
+                    If you drop the tower, you must pick 3 pieces at random and perform their tasks 
+                </p>
             </div>
         </div>
     </div>
