--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <nav-menu></nav-menu>
     <div class="phone">
         <a class="right" href="portfolio.html">PORTFOLIO<br>&<br>STUFF</a>
-        <a class="left" href="cv.html">CV<br>&<br>STUFF</a>
+        <a class="left" href="games.html">Games</a>
     </div>
     <div class="hover">
         <div style="position: fixed;">
-            <div class="background" id="backgroundA"><p class="p-a">CV<br>&<br>STUFF</p></div>
+            <div class="background" id="backgroundA"><p class="p-a">Games</p></div>
             <div class="background" id="backgroundB"><p class="p-b">PORTFOLIO<br>&<br>STUFF</p></div>
             <div id="custom-cursor"></div>
         </div>
