--- a/games/would-you-rather.html
+++ b/games/would-you-rather.html
@@ -32,30 +32,32 @@
                     </div>
                 </div>
                 <h2>Drinking Game Option</h2>
-                <p class="note">
-                    In the non-drinking game, each player gets a unique question. <br>
-                    In the drinking game, the same question is posed to all players.
-                </p> 
-                <label><input type="checkbox" id="general" value="general"> Drinking game</label>
-                <br>
-                <div class="toggle-container">
-                    <button class="toggle-btn">Rules for Turning "Would You Rather" into a Drinking Game:</button>
-                    <div class="content">
-                        <p>
-                            <ol>
-                                <li>players answer the question simultaneously.</li>
-                                <ul>
-                                    <li>Use cards to identify your answer: green for the first option, red for the second.</li>
-                                    <li>Alternatively, use your hands: one finger for the first option, two fingers for the second.</li>
-                                    <li>Or get cretive and find your own identifiers.</li>
-                                </ul>
-                                <li>Count the votes for each option.</li>
-                                <li>Minority voters drink.</li>
-                                <li>You can abstain from answering a question by taking a double drink.</li>
-                            </ol>  
-                        </p>
-                    </div>
-                </div>   
+                <div class="div-left">
+                    <p class="note">
+                        In the non-drinking game, each player gets a unique question. <br>
+                        In the drinking game, the same question is posed to all players.
+                    </p> 
+                    <label><input type="checkbox" id="general" value="general"> Drinking game</label>
+                    <br>
+                    <div class="toggle-container">
+                        <button class="toggle-btn">Rules for Turning "Would You Rather" into a Drinking Game:</button>
+                        <div class="content">
+                            <p>
+                                <ol>
+                                    <li>players answer the question simultaneously.</li>
+                                    <ul>
+                                        <li>Use cards to identify your answer: green for the first option, red for the second.</li>
+                                        <li>Alternatively, use your hands: one finger for the first option, two fingers for the second.</li>
+                                        <li>Or get cretive and find your own identifiers.</li>
+                                    </ul>
+                                    <li>Count the votes for each option.</li>
+                                    <li>Minority voters drink.</li>
+                                    <li>You can abstain from answering a question by taking a double drink.</li>
+                                </ol>  
+                            </p>
+                        </div>
+                    </div>   
+                </div>
                 <div id="player-section">
                     <h2>Add Players</h2>
                     <p class="note">
