--- a/games/would-you-rather.html
+++ b/games/would-you-rather.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <div>
-        <div class="intro-div">
+        <div class="start-screen">
             <div class="container">
                 <h2>Would You Rather</h2>
             </div>
