--- a/games/taboo.html
+++ b/games/taboo.html
@@ -53,7 +53,7 @@
             </div>
             <button id="pass">Pass</button>
             <button id="guessed">Guessed</button>
-            <p class="note phonenote">Swipe card right for Guessed<br>
+            <p class="note ">Swipe card right for Guessed<br>
             Swipe card left for Pass</p>
         </div>
     </div>
