--- a/games/would-you-rather.html
+++ b/games/would-you-rather.html
@@ -10,6 +10,7 @@
         
           gtag('config', 'G-6YZQRLN0R4');
         </script>    
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
     <title>Would You Rather Party Game</title>
     <link rel="stylesheet" href="would-you-rather.css">
