--- a/games/heads-up.html
+++ b/games/heads-up.html
@@ -31,7 +31,8 @@
                         <option value="120">2 minutes</option>
                         <option value="180">3 minutes</option>
                     </select>
-                </div>
+                </div> 
+                <br>
                 <div>
                     <label for="theme">Choose a theme:</label>
                     <select id="theme">
@@ -46,9 +47,16 @@
                         <option value="fairytales">Fairy Tales and Fantasy Characters</option>
                     </select>
                 </div>
+                <br>
                 <button id="start-game">Start Game</button>
             </div>
         </div>
+        <p class="note">
+            GamePlay:<br><br>
+            Click for next word <br>
+            Double click to pass<br>
+            Use your phone horizontally
+        </p>
     </div>
     <div id="game-screen" style="display: none;">
         <div class="container">
