--- a/games/taboo.html
+++ b/games/taboo.html
@@ -31,6 +31,7 @@
                         <option value="180">3 Minutes</option>
                     </select>
                 </div>
+                <br>
                 <div>
                     <label for="theme">Select Theme:</label>
                     <select id="theme">
@@ -38,6 +39,7 @@
                         <option value="adult">Adult theme</option>
                     </select>
                 </div>
+                <br>
                 <button id="start-game">Start Game</button>
             </div>
         </div>
@@ -51,8 +53,10 @@
                     <!-- Taboo words will be inserted here -->
                 </ul>
             </div>
-            <button id="pass">Pass</button>
-            <button id="guessed">Guessed</button>
+            <div class="two-buttons">
+                <button id="pass">Pass</button>
+                <button id="guessed">Guessed</button>
+            </div>
             <p class="note ">Swipe card right for Guessed<br>
             Swipe card left for Pass</p>
         </div>
