--- a/games/would-you-rather.html
+++ b/games/would-you-rather.html
@@ -15,6 +15,7 @@
     <title>Would You Rather Party Game</title>
     <link rel="stylesheet" href="would-you-rather.css">
     <link rel="stylesheet" href="games-general.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 </head>
 <body>
     <!-- <div class="start-screen">
