--- a/games/would-you-rather.html
+++ b/games/would-you-rather.html
@@ -55,7 +55,7 @@
         <div class="container">
             <p id="player"></p>
             <p id="question"></p>
-            <button onclick="nextQuestion()">Next Question</button>
+            <button class="next-question" onclick="nextQuestion()">Next Question</button>
             <br>
             <div>
                 <button class="second-button" onclick="editPlayers()">Edit Players</button>
