--- a/games/would-you-rather.html
+++ b/games/would-you-rather.html
@@ -55,12 +55,13 @@
         <div class="container">
             <p id="player"></p>
             <p id="question"></p>
-            <button class="next-question" onclick="nextQuestion()">Next Question</button>
-            <br>
-            <div>
-                <button class="second-button" onclick="editPlayers()">Edit Players</button>
-                <button class="second-button" onclick="editFilters()">Edit Filters</button>
-            </div>
+        </div>
+        <br>
+        <button class="next-question" onclick="nextQuestion()">Next Question</button>
+        <br>
+        <div class="two-buttons">
+            <button class="second-button" onclick="editPlayers()">Edit Players</button>
+            <button class="second-button" onclick="editFilters()">Edit Filters</button>
         </div>
     </div>
     <div id="edit-filter-section" style="display: none;">
