--- a/games/would-you-rather.html
+++ b/games/would-you-rather.html
@@ -52,9 +52,11 @@
         </div>
     </div>
     <div id="game-section" style="display: none;">
-        <div class="container">
-            <p id="player"></p>
-            <p id="question"></p>
+        <div class="card">
+            <div class="container">
+                <p id="player"></p>
+                <p id="question"></p>
+            </div>
         </div>
         <br>
         <button class="next-question" onclick="nextQuestion()">Next Question</button>
