--- a/games/would-you-rather.html
+++ b/games/would-you-rather.html
@@ -52,7 +52,7 @@
         </div>
     </div>
     <div id="game-section" style="display: none;">
-        <div class="card">
+        <div id="card">
             <div class="container">
                 <p id="player"></p>
                 <p id="question"></p>
