--- a/games/would-you-rather.html
+++ b/games/would-you-rather.html
@@ -59,7 +59,8 @@
             </div>
         </div>
         <br>
-        <button class="next-question" onclick="nextQuestion()">Next Question</button>
+        <p class="note ">Swipe card left for Next</p>
+        <button class="next-question" onclick="nextQuestion()">Next Question<br></button>
         <br>
         <div class="two-buttons">
             <button class="second-button" onclick="editPlayers()">Edit Players</button>
