--- a/games/would-you-rather.html
+++ b/games/would-you-rather.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 </head>
 <body>
-    <div class="start-screen">
+    <div id="start-screen">
         <div class="container">
             <h2>Would You Rather</h2>
         </div>
@@ -54,7 +54,7 @@
     <div id="game-section" style="display: none;">
         <div id="card">
             <div class="container">
-                <p id="player"></p>
+                <p id="player" class="or"></p>
                 <p id="question"></p>
             </div>
         </div>
