--- a/games/would-you-rather.html
+++ b/games/would-you-rather.html
@@ -28,8 +28,10 @@
                 In the non-drinking game, each player gets a unique question. <br>
                 In the drinking game, the same question is posed to all players.
             </p>
-            <label><input type="radio" name="game-type" value="drinking" onclick="setGameType('drinking')"> Drinking game</label>
-            <label><input type="radio" name="game-type" value="non-drinking" onclick="setGameType('non-drinking')"> Non-drinking game</label>
+            <div class="two-buttons">
+                <label><input type="radio" name="game-type" value="drinking" onclick="setGameType('drinking')"> Drinking game</label>
+                <label><input type="radio" name="game-type" value="non-drinking" onclick="setGameType('non-drinking')"> Non-drinking game</label>
+            </div>
         </div>
         <div class="container" id="theme-section" style="display: none;">
             <h2>Filter Themes</h2>
