--- a/games.html
+++ b/games.html
@@ -43,6 +43,12 @@
                 </div>
                 Heads Up
             </a>
+            <a class="game-div" href="games/trivia.html">
+                <div class="zoom-box">
+                    <img class="game-cover" src="assets/trivia.jpg">
+                </div>
+                Trivia
+            </a>
         </div>
     </div>
 </body>
