--- a/games/trivia.html
+++ b/games/trivia.html
@@ -21,10 +21,17 @@
     
         <div id="theme-selection">
             <h2>Theme:</h2>
-            <select id="theme" class="drop-down-menu">
-                <option value="geography">Geography</option>
-                <option value="popculture">Pop culture</option>
-            </select>
+            <div class="input-container">
+                <label><input type="checkbox" value="geography">Geography</label><br>
+                <label><input type="checkbox" value="popculture">Pop culture</label><br>
+                <label><input type="checkbox" value="general">General Knowledge</label><br>
+                <label><input type="checkbox" value="history">History</label><br>
+                <label><input type="checkbox" value="technology">Technology</label><br>
+                <label><input type="checkbox" value="startups">Startups</label><br>
+                <label><input type="checkbox" value="slogans">Logos & Slogans</label><br>
+                <label><input type="checkbox" value="science">Science</label><br>
+                <label><input type="checkbox" value="animals">Animals</label><br>
+            </div>
             <br>
             <br>
             <button onclick="startGame()">Start Game</button>
