--- a/games/trivia.html
+++ b/games/trivia.html
@@ -22,15 +22,15 @@
         <div id="theme-selection">
             <h2>Theme:</h2>
             <div class="input-container">
-                <label><input type="checkbox" value="geography">Geography</label><br>
-                <label><input type="checkbox" value="popculture">Pop culture</label><br>
-                <label><input type="checkbox" value="general">General Knowledge</label><br>
-                <label><input type="checkbox" value="history">History</label><br>
-                <label><input type="checkbox" value="technology">Technology</label><br>
-                <label><input type="checkbox" value="startups">Startups</label><br>
-                <label><input type="checkbox" value="slogans">Logos & Slogans</label><br>
-                <label><input type="checkbox" value="science">Science</label><br>
-                <label><input type="checkbox" value="animals">Animals</label><br>
+                <label><input type="checkbox" value="geography" checked><span>Geography</span></label>
+                <label><input type="checkbox" value="animals" checked><span>Animals</span></label>  
+                <label><input type="checkbox" value="general" checked><span>General Knowledge</span></label> 
+                <label><input type="checkbox" value="history" checked><span>History</span></label> 
+                <label><input type="checkbox" value="technology" checked><span>Technology</span></label> 
+                <label><input type="checkbox" value="startups" checked><span>Startups</span></label> 
+                <label><input type="checkbox" value="slogans" checked><span>Logos & Slogans</span></label> 
+                <label><input type="checkbox" value="science" checked><span>Science</span></label> 
+                <label><input type="checkbox" value="popculture" checked><span>Pop culture</span></label> 
             </div>
             <br>
             <br>
