--- a/games/trivia.html
+++ b/games/trivia.html
@@ -6,6 +6,7 @@
     <title>Trivia Game</title>
     <link rel="stylesheet" href="games-general.css">
     <link rel="stylesheet" href="trivia.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
