--- a/games/trivia.html
+++ b/games/trivia.html
@@ -51,7 +51,7 @@
             <div id="question-area">
                 <h2 id="question"></h2>
                 <div id="answers"></div>
-                <button id="show-answer" onclick="showAnswer()">Show Correct Answer</button>
+                <button id="show-answer" onclick="showAnswer()">Answer</button>
             </div>
         </div>
         <div class="container">
